# Project_self-study

./: .env.sample  README.md  Readme.md  pyproject.toml
config/: settings.py
education/: admin.py  models.py  serializers.py  urls.py  views.py
education/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  serializers.py  urls.py
users/migrations/: 0001_initial.py
